--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <main class="main-content">
         <form>
           <div class="form-group">
-            <label for="name">Name</label>
+            <label for="name">Navn</label>
             <input type="text" name="name" id="name" required />
           </div>
           <div class="form-group">
@@ -49,15 +49,15 @@
             <input type="text" name="email" id="email" required />
           </div>
           <div class="form-group">
-            <label for="message">Message</label>
+            <label for="message">Melding</label>
             <textarea name="message" id="message"></textarea>
           </div>
           <div class="form-group">
-            <button type="submit" class="btn">Submit</button>
+            <button type="submit" class="btn">Send</button>
           </div>
         </form>
         <div class="text-container">
-          <h1>Coming Soon For Every Dev Out There</h1>
+          <h1>På vei ut på markedet til alle utviklere der ute</h1>
           <p>
             Den nye appen Bono vil forandre måten du tenker rundt content
             management for alltid, og vil la deg bruke mer av tiden din på det
