:zap: Re-wrapp index-file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </a>
         <div class="header-right">
           <div>
-            <i class="fas fa-envelope"> contact@bono.com </i>
+            <i class="fas fa-envelope"> post@bono.com </i>
           </div>
           <div>
             <i class="fas fa-phone"> +47 123 45 678 </i>
